ConnexoProject/force-app/main/default/objects/Questions__c/Questions__c.object-meta.xml
<CustomObject>
    <description>Form that the training department uses to capture the Quiz Questions for a SOP</description>
    <label>Questions</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>