ConnexoProject/force-app/main/default/objects/Questions__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>25</length>
    <type>Text</type>
</CustomField>