ConnexoProject/force-app/main/default/objects/Questions__c/fields/Corp_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Corp_Doc_No__c</fullName>
    <label>Corp Doc No</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>