ConnexoProject/force-app/main/default/objects/Questions__c/fields/Possible_Response__c.field-meta.xml
<CustomField>
    <fullName>Possible_Response__c</fullName>
    <label>Possible Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>