ConnexoProject/force-app/main/default/objects/Questions__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True / False</fullName>
            </value>
            <value>
                <fullName>Single Response</fullName>
            </value>
            <value>
                <fullName>Multiple Response</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Sequence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>