ConnexoProject/force-app/main/default/objects/Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Corp_Doc_No__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question__c</columns>
    <columns>Possible_Response__c</columns>
    <columns>Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>